"make check" now works.

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,4 +9,4 @@ test_libdump1090_SOURCES = $(libdump1090_la_SOURCES) test_libdump1090.c
 test_libdump1090_CFLAGS = $(libdump1090_la_CFLAGS)
 test_libdump1090_LDADD = $(libdump1090_la_LIBADD)
 
-TESTS = test_audio_manager
+TESTS = test_libdump1090
