Link unit test against shared library.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,8 +5,12 @@ include_HEADERS = ten90.h
 
 noinst_PROGRAMS = test_libten90
 
-test_libten90_SOURCES = $(libten90_la_SOURCES) test_libten90.c
+#dump1090_SOURCES = dump_1090.c
+#dump1090_CFLAGS = $(libten90_la_CFLAGS)
+#dump1090_LDADD = $(libten90_la_LIBADD)
+
+test_libten90_SOURCES = test_libten90.c
 test_libten90_CFLAGS = $(libten90_la_CFLAGS)
-test_libten90_LDADD = $(libten90_la_LIBADD)
+test_libten90_LDADD = $(libten90_la_LIBADD) libten90.la
 
 TESTS = test_libten90
